--- a/src/app/workers/workers.page.html
+++ b/src/app/workers/workers.page.html
@@ -24,7 +24,7 @@
         <ion-button expand="block" shape="round">Reports</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button expand="block" shape="round" color="secondary">Workers</ion-button>
+        <ion-button expand="block" shape="round" color="medium">Workers</ion-button>
       </ion-col>
     </ion-row>
     <!-- end works and reports buttons -->
@@ -43,12 +43,17 @@
       <ion-label>
         <div>
           <ion-row>
-            <span margin-left>{{worker.name}}</span>
+            <span margin-left class="card-font">{{worker.name}}</span>
           </ion-row>
         </div>
         <div>
           <ion-row padding-top>
-            <span margin-left>{{worker.title}}</span>
+            <span margin-left class="loading">{{worker.title}}</span>
+          </ion-row>
+        </div>
+        <div>
+          <ion-row padding-top>
+            <span margin-left class="loading">{{worker.role}}</span>
           </ion-row>
         </div>
         <div>
@@ -61,4 +66,27 @@
     </div>
   </ion-card>
   <!-- end reports card -->
+
+  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+    <ion-fab-button color="secondary">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="top">
+      <ion-fab-button>
+        <ion-icon name="paper"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+    <ion-fab-list side="start">
+      <ion-fab-button>
+        <ion-icon name="home"></ion-icon>
+      </ion-fab-button>
+
+    </ion-fab-list>
+
+    <ion-fab-list side="end">
+      <ion-fab-button>
+        <ion-icon name="qr-scanner"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
 </ion-content>
