--- a/src/app/workers/workers.page.scss
+++ b/src/app/workers/workers.page.scss
@@ -5,16 +5,14 @@ ion-item {
 ion-thumbnail {
   // min-width: 7.5rem;
   // min-height: 5.5rem;
-  width: 115px;
-  height: 84px;
+  width: 90.5px;
+  height: 119px;
 
   ion-img {
     border: 0px solid #fff;
     border-radius: 8%;
-    // max-width: 7.5rem;
-    // min-width: 7.5rem;
-    width: 115px;
-    height: 84px;
+    width: 90.5px;
+    height: 119px;
   }
 }
 
@@ -35,9 +33,8 @@ div {
 .top-img {
   height: 163px;
 
-
   img {
-    border-radius: 15px;
+    border-radius: 8px;
 
   }
 }
@@ -49,4 +46,15 @@ div {
 
 .loading {
   font-size: 12px;
+  color: #000000;
+
+}
+
+.card-font {
+  font-size: 14px;
+  color: #000000;
+}
+
+ion-button {
+  height: 35px;
 }
