--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
+	<ion-toolbar>
+		<ion-title>login</ion-title>
+	</ion-toolbar>
 </ion-header>
- 
+
 <ion-content>
 	<div class="card-body">
 		<div>
@@ -32,12 +32,36 @@
 				</div>
 			</div>
 			<div class="form-group form-row mt-3 mb-0">
-				<button class="btn btn-primary btn-block btn-lg"
-					[class.loader--text]="authService.showLoader"
+				<button class="btn btn-primary btn-block btn-lg" [class.loader--text]="authService.showLoader"
 					[disabled]="!loginForm.valid || authService.showLoader" (click)="login(loginForm.value)"
 					type="submit"><span>{{ authService.showLoader ? '' : 'Login' }}</span>
 				</button>
 			</div>
 		</form>
 	</div>
+
+	<ion-grid>
+		<ion-row justify-content-center>
+			<ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+				<div text-center>
+					<h4>NEOKON</h4>
+				</div>
+				<div padding>
+					<ion-item>
+						<ion-input type="email" placeholder="Email"></ion-input>
+					</ion-item>
+
+					<ion-item>
+						<ion-input type="password" placeholder="Password"></ion-input>
+					</ion-item>
+				</div>
+
+				<div padding>
+					<ion-button size="large" expand="block" type="submit">Login
+					</ion-button>
+				</div>
+			</ion-col>
+		</ion-row>
+	</ion-grid>
+
 </ion-content>
