--- a/src/app/workers/workers.page.scss
+++ b/src/app/workers/workers.page.scss
@@ -47,14 +47,23 @@ div {
 .loading {
   font-size: 12px;
   color: #000000;
+  font-weight: 400;
 
 }
 
 .card-font {
   font-size: 14px;
   color: #000000;
+  font-weight: 500;
 }
 
 ion-button {
   height: 35px;
+}
+
+ion-fab {
+  .icon {
+    background-color: transparent !important;
+    color: #000000 !important;
+  }
 }
