update reports and workers page + login UI

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-	<div class="card-body">
+	<!-- <div class="card-body">
 		<div>
 			<h4>LOGIN</h4>
 			<h6>Enter your Username and Password </h6>
@@ -38,15 +38,14 @@
 				</button>
 			</div>
 		</form>
-	</div>
-
+	</div> -->
 	<ion-grid>
-		<ion-row justify-content-center>
+		<ion-row>
 			<ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
 				<div text-center>
 					<h4>NEOKON</h4>
 				</div>
-				<div padding>
+				<ion-list padding>
 					<ion-item>
 						<ion-input type="email" placeholder="Email"></ion-input>
 					</ion-item>
@@ -54,8 +53,7 @@
 					<ion-item>
 						<ion-input type="password" placeholder="Password"></ion-input>
 					</ion-item>
-				</div>
-
+				</ion-list>
 				<div padding>
 					<ion-button size="large" expand="block" type="submit">Login
 					</ion-button>
