--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,11 +1,7 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+
  
 <ion-content>
-	<div class="card-body">
+	<!-- <div class="card-body">
 		<div>
 			<h4>LOGIN</h4>
 			<h6>Enter your Username and Password </h6>
@@ -39,5 +35,38 @@
 				</button>
 			</div>
 		</form>
+	</div> -->
+<div class="main">
+	<ion-grid no-padding>
+		<ion-row no-padding>
+			<ion-col><img src="../../assets/Logo.jpg" alt="" width=100%; height=100%>
+			</ion-col>		
+		</ion-row>
+	</ion-grid>
+
+	        <ion-grid style="position: absolute; bottom:10%; width: 100%;">
+				<ion-row padding>
+					<ion-col>
+						<ion-item>
+							<ion-input  placeholder="EMAIL ADRESS"></ion-input>
+						</ion-item> <br><br>
+			
+			<ion-item>
+				<ion-input type="password" placeholder="PASSWORD" padding></ion-input>
+			</ion-item>
+			
+			
+			<div text-center padding>
+					<ion-button color="Enter" >Enter</ion-button>
+			</div>	
+					<ion-label color="medium">
+						Forgot Password
+					</ion-label>
+					</ion-col>
+				</ion-row>
+			</ion-grid>
+		
+		
 	</div>
+
 </ion-content>
