update reports and workers page + login UI1

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,10 +1,6 @@
-<ion-header>
-	<ion-toolbar>
-		<ion-title>login</ion-title>
-	</ion-toolbar>
-</ion-header>
+<ion-content center text-center>
 
-<ion-content>
+
 	<!-- <div class="card-body">
 		<div>
 			<h4>LOGIN</h4>
@@ -39,27 +35,60 @@
 			</div>
 		</form>
 	</div> -->
-	<ion-grid>
-		<ion-row>
-			<ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
-				<div text-center>
-					<h4>NEOKON</h4>
-				</div>
-				<ion-list padding>
-					<ion-item>
-						<ion-input type="email" placeholder="Email"></ion-input>
-					</ion-item>
 
-					<ion-item>
-						<ion-input type="password" placeholder="Password"></ion-input>
-					</ion-item>
-				</ion-list>
-				<div padding>
-					<ion-button size="large" expand="block" type="submit">Login
-					</ion-button>
-				</div>
-			</ion-col>
-		</ion-row>
-	</ion-grid>
+	<!-- 2 -->
+	<div class="background">
+		<div style="padding-left: 100px">
+
+			<img src="../../assets/PNG.png" alt="" width="auto" height="auto">
+		</div>
+		<!-- <div style="position: fixed; bottom: 20px; width: 100%;">
+
+			
+		</div> -->
+		<!-- <ion-grid no-padding>
+			<ion-row>
+				<ion-col style="padding-left: 100px">
+				</ion-col>
+			</ion-row>
+		</ion-grid> -->
+		<ion-grid style="position: fixed; bottom: 90px; width: 100%;">fdsfa
+			<ion-row>
+				<ion-col>
+					<ion-list padding style="background-color: transparent">
+						<ion-item>
+							<ion-input type="email" placeholder="Email Address"></ion-input>
+						</ion-item>
+
+						<ion-item>
+							<ion-input type="password" placeholder="Password"></ion-input>
+						</ion-item>
+						<div>
+							<ion-button size="large" expand="block" type="submit" style="background-color: transparent">Login
+							</ion-button>
+						</div>
+					</ion-list>
+				</ion-col>
+			</ion-row>
+		</ion-grid>
+
+
+	</div>
+
+	<!-- <ion-card>
+		<ion-card-header>Login</ion-card-header>
+		<ion-card-content>
+			<ion-list no-lines>
+				<ion-item>
+					<ion-label floating>Email Address</ion-label>
+					<ion-input type="text"></ion-input>
+				</ion-item>
+				<ion-item>
+					<ion-label aria-placeholder="fasd"></ion-label>
+					<ion-input type="password"></ion-input>
+				</ion-item>
+			</ion-list>
+		</ion-card-content>
+	</ion-card> -->
 
 </ion-content>
