--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,13 +1,46 @@
-.background {
-  // background-image: url('../../assets/login.png');
-  background-color: #000000;
+// .background {
+//   // background-image: url('../../assets/login.png');
+//   background-color: #000000;
 
+//   width: 100%;
+//   height: 100%;
+
+// }
+
+// ion-input {
+//   --placeholder-color: red;
+//   --placeholder-opacity: 1;
+// }
+ion-content {
+  width: 100%;
+}
+
+.main {
+  background-color: #000000;
   width: 100%;
   height: 100%;
 
+  form {
+    width: 100%;
+  }
+}
+
+ion-item {
+  background-color: transparent !important;
+  --background: none;
+  opacity: 1;
+  text-align: center;
+  --border-color: #707070;
+  --highlight-color-focused: none;
 }
 
 ion-input {
-  --placeholder-color: red;
+  --placeholder-color: #707070;
   --placeholder-opacity: 1;
+  --placeholder-align: center;
+  color: white;
+}
+
+ion-button {
+  color: #707070;
 }
