--- a/src/app/workers/workers.page.html
+++ b/src/app/workers/workers.page.html
@@ -57,14 +57,10 @@
             <span margin-left class="loading">{{worker.role}}</span>
           </ion-row>
         </div>
-
-
         <div>
           <ion-row style="width: 100%; padding-top: 10px" justify-content-center>
-            <!-- <ion-progress-bar value="0.25"></ion-progress-bar>
-            <span margin-left class="loading">99%</span> -->
             <div>
-              <ion-segment style="width: 188px; height: 30px">
+              <ion-segment style="width: 188px; height: 30px;">
                 <ion-segment-button value="on" class="segment-button">
                   <ion-label>On</ion-label>
                 </ion-segment-button>
