--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -65,4 +65,10 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  // @font-face {
+  //   font-family: 'bigjohnpro-bold';
+  //   src: url('../assets/fonts/Big\ John\ PRO/bigjohnpro-bold.otf');
+  // }
+
 }
