--- a/src/app/components/ion-fab/ion-fab.component.html
+++ b/src/app/components/ion-fab/ion-fab.component.html
@@ -3,7 +3,7 @@
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
       <ion-fab-list side="top">
-        <ion-fab-button>
+        <ion-fab-button (click)="onClick()">
           <ion-icon name="paper"></ion-icon>
         </ion-fab-button>
       </ion-fab-list>
