--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,4 @@
-
- 
-<ion-content>
+<ion-content center text-center>
 	<!-- <div class="card-body">
 		<div>
 			<h4>LOGIN</h4>
@@ -28,45 +26,74 @@
 				</div>
 			</div>
 			<div class="form-group form-row mt-3 mb-0">
-				<button class="btn btn-primary btn-block btn-lg"
-					[class.loader--text]="authService.showLoader"
+				<button class="btn btn-primary btn-block btn-lg" [class.loader--text]="authService.showLoader"
 					[disabled]="!loginForm.valid || authService.showLoader" (click)="login(loginForm.value)"
 					type="submit"><span>{{ authService.showLoader ? '' : 'Login' }}</span>
 				</button>
 			</div>
 		</form>
 	</div> -->
-<div class="main">
-	<ion-grid no-padding>
+
+	<!-- 2 -->
+	<!-- <div class="background">
+		<div style="padding-left: 100px">
+			<img src="../../assets/PNG.png" alt="" width="auto" height="auto">
+		</div> -->
+	<!-- <div style="position: fixed; bottom: 20px; width: 100%;">
+		</div> -->
+	<!-- <ion-grid no-padding>
+			<ion-row>
+				<ion-col style="padding-left: 100px">
+				</ion-col>
+			</ion-row>
+		</ion-grid> -->
+	<!-- <ion-grid style="position: fixed; bottom: 90px; width: 100%;">
+			<ion-row>
+				<ion-col>
+					<ion-list padding style="background-color: transparent">
+						<ion-item>
+							<ion-input type="email" placeholder="Email Address"></ion-input>
+						</ion-item>
+						<ion-item>
+							<ion-input type="password" placeholder="Password"></ion-input>
+						</ion-item>
+						<div>
+							<ion-button size="large" expand="block" type="submit" style="background-color: transparent">Login
+							</ion-button>
+						</div>
+					</ion-list>
+				</ion-col>
+			</ion-row>
+		</ion-grid>
+	</div> -->
+	<ion-grid no-padding style="padding-left: 90px; padding-top: 50px" class="main">
 		<ion-row no-padding>
-			<ion-col><img src="../../assets/Logo.jpg" alt="" width=100%; height=100%>
-			</ion-col>		
+			<ion-col no-padding>
+				<img src="../../assets/logo.png" alt="" height="auto" width="100%">
+			</ion-col>
 		</ion-row>
 	</ion-grid>
-
-	        <ion-grid style="position: absolute; bottom:10%; width: 100%;">
-				<ion-row padding>
-					<ion-col>
-						<ion-item>
-							<ion-input  placeholder="EMAIL ADRESS"></ion-input>
-						</ion-item> <br><br>
-			
-			<ion-item>
-				<ion-input type="password" placeholder="PASSWORD" padding></ion-input>
-			</ion-item>
-			
-			
-			<div text-center padding>
-					<ion-button color="Enter" >Enter</ion-button>
-			</div>	
-					<ion-label color="medium">
-						Forgot Password
-					</ion-label>
-					</ion-col>
-				</ion-row>
-			</ion-grid>
-		
-		
-	</div>
-
+	<ion-grid style="position: absolute; bottom:5%; width: 100%;" padding>
+		<form action="">
+			<ion-row>
+				<ion-col>
+					<ion-item>
+						<ion-input type="email" placeholder="EMAIL ADRESS" padding></ion-input>
+					</ion-item>
+					<div padding></div>
+					<ion-item>
+						<ion-input type="password" placeholder="PASSWORD" padding></ion-input>
+					</ion-item>
+					<div text-center padding>
+						<ion-button color="tertiary">
+							<ion-label color="primary">ENTER</ion-label>
+						</ion-button>
+					</div>
+					<ion-button color="tertiary" style="float: left">
+						<ion-label>Forgot Password</ion-label>
+					</ion-button>
+				</ion-col>
+			</ion-row>
+		</form>
+	</ion-grid>
 </ion-content>
