--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,36 +1,42 @@
-.main {
-   background-color: #000000;
+// .background {
+//   // background-image: url('../../assets/login.png');
+//   background-color: #000000;
+
+//   width: 100%;
+//   height: 100%;
+
+// }
+
+// ion-input {
+//   --placeholder-color: red;
+//   --placeholder-opacity: 1;
+// }
+ion-content {
+    width: 100%;
+  }
+  
+  .main {
+    background-color: #000000;
     width: 100%;
     height: 100%;
   
-   
-   
-}
-ion-item{
+    form {
+      width: 100%;
+    }
+  }
+  
+  ion-item {
     background-color: transparent !important;
-    --background:none;
+    --background: none;
     opacity: 1;
-  text-align: center; 
-  --border-color:#707070; 
-  --highlight-color-focused: none;
-    
-
-}
-    
-ion-input {
-    --placeholder-color:#707070;
-    --placeholder-opacity:1;
+    text-align: center;
+    --border-color: #707070;
+    --highlight-color-focused: none;
+  }
+  
+  ion-input {
+    --placeholder-color: #707070;
+    --placeholder-opacity: 1;
     --placeholder-align: center;
     color: white;
-   
-
-}
-ion-button {
-    background-color: Transparent;
-    background-repeat:no-repeat;
-    border: none;
-    cursor:pointer;
-    overflow: hidden;
-    outline:none;
-    --box-shadow:0;
-}
+  }
