--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -74,26 +74,41 @@
 		</ion-row>
 	</ion-grid>
 	<ion-grid style="position: absolute; bottom:5%; width: 100%;" padding>
-		<form action="">
-			<ion-row>
-				<ion-col>
+		<form [formGroup]="loginForm">
+			
 					<ion-item>
-						<ion-input type="email" placeholder="EMAIL ADRESS" padding></ion-input>
+						<ion-input type="email" placeholder="EMAIL ADRESS" padding require="" formControlName="email"></ion-input>
+						
 					</ion-item>
 					<div padding></div>
-					<ion-item>
-						<ion-input type="password" placeholder="PASSWORD" padding></ion-input>
+					<ion-item> 
+						   <ion-input type="password" placeholder="PASSWORD" padding formControlName="password"></ion-input>
+						   
 					</ion-item>
 					<div text-center padding>
-						<ion-button color="tertiary">
-							<ion-label color="primary">ENTER</ion-label>
+						<ion-button color="tertiary" (click)="login()" type='submit'> 
+							<ion-label color="primary">
+								ENTER
+								<div *ngIf="loginForm.controls.email.touched && loginForm.controls.email.errors?.email"
+					class="text text-danger mt-1">
+					Invalid Email
+				</div>
+								<div *ngIf="loginForm.controls['email'].touched && loginForm.controls['email'].errors?.required"
+					class="text text-danger mt-1">
+					Email is required
+				</div>
+								<div *ngIf="loginForm.controls['password'].touched && loginForm.controls['password'].errors?.required"
+								class="text text-danger mt-1">
+								Password is required
+							   </div>
+							</ion-label>
+
 						</ion-button>
 					</div>
 					<ion-button color="tertiary" style="float: left">
 						<ion-label>Forgot Password</ion-label>
 					</ion-button>
-				</ion-col>
-			</ion-row>
+			
 		</form>
 	</ion-grid>
 </ion-content>
