--- a/src/app/components/ion-fab/ion-fab.component.html
+++ b/src/app/components/ion-fab/ion-fab.component.html
@@ -3,12 +3,12 @@
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
       <ion-fab-list side="top">
-        <ion-fab-button (click)="onClick()">
+        <ion-fab-button href="reports">
           <ion-icon name="paper"></ion-icon>
         </ion-fab-button>
       </ion-fab-list>
       <ion-fab-list side="start">
-        <ion-fab-button>
+        <ion-fab-button href="worksites">
           <ion-icon name="home"></ion-icon>
         </ion-fab-button>
       </ion-fab-list>
