--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,11 +1,21 @@
-// .background {
-//   // background-image: url('../../assets/login.png');
-//   background-color: #000000;
+.background {
+  --background: #000000;
+}
 
-//   width: 100%;
-//   height: 100%;
+.logo-wrapper {
+  position: relative;
+  height: 53vh;
+  width: 100%;
+  margin-top: 10vh;
+  margin-bottom: 30px;
+  // display: flex;
+  // align-items: flex-end;
 
-// }
+  ion-img {
+    height: 50vh;
+    // width: 80vh;
+  }
+}
 
 // ion-input {
 //   --placeholder-color: red;
@@ -13,6 +23,12 @@
 // }
 ion-content {
   width: 100%;
+  margin: 0;
+
+  hr {
+    margin: 0;
+    background-color: #000000;
+  }
 }
 
 .main {
@@ -32,6 +48,7 @@ ion-item {
   text-align: center;
   --border-color: #707070;
   --highlight-color-focused: none;
+
 }
 
 ion-input {
@@ -39,4 +56,30 @@ ion-input {
   --placeholder-opacity: 1;
   --placeholder-align: center;
   color: white;
+}
+
+ion-label {
+  div {
+    color: red;
+  }
+}
+
+.homescreen-content {
+  display: flex;
+  /* displays flex-items (children) inline */
+  flex-direction: column;
+  /* stacks them vertically */
+  height: 100vh;
+  /* 100% of the viewport height */
+}
+
+.homescreen-content>div {
+  display: flex;
+  justify-content: center;
+  /* horizontally centered */
+  align-items: center;
+  /* vertically centered */
+  flex: 1;
+  /* each stretches and takes equal height of the parent (50vh) */
+  background-color: #000000;
 }
