--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -3,17 +3,17 @@
 }
 
 .logo-wrapper {
-  position: relative;
-  height: 53vh;
+  // position: relative;
+  // height: 53vh;
   width: 100%;
-  margin-top: 10vh;
-  margin-bottom: 30px;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+
   // display: flex;
   // align-items: flex-end;
-
   ion-img {
     height: 50vh;
-    // width: 80vh;
+    width: 140%; // width: 80vh;
   }
 }
 
@@ -32,13 +32,7 @@ ion-content {
 }
 
 .main {
-  background-color: #000000;
   width: 100%;
-  height: 100%;
-
-  form {
-    width: 100%;
-  }
 }
 
 ion-item {
@@ -48,7 +42,6 @@ ion-item {
   text-align: center;
   --border-color: #707070;
   --highlight-color-focused: none;
-
 }
 
 ion-input {
@@ -56,6 +49,7 @@ ion-input {
   --placeholder-opacity: 1;
   --placeholder-align: center;
   color: white;
+  width: 100%
 }
 
 ion-label {
