--- a/src/app/workers/workers.page.scss
+++ b/src/app/workers/workers.page.scss
@@ -3,10 +3,8 @@ ion-item {
 }
 
 ion-thumbnail {
-  // min-width: 7.5rem;
-  // min-height: 5.5rem;
   width: 90.5px;
-  height: 119px;
+  height: 100%;
 
   ion-img {
     border: 0px solid #fff;
@@ -35,7 +33,6 @@ div {
 
   img {
     border-radius: 8px;
-
   }
 }
 
@@ -48,7 +45,6 @@ div {
   font-size: 12px;
   color: #000000;
   font-weight: 400;
-
 }
 
 .card-font {
@@ -69,6 +65,9 @@ ion-fab {
 }
 
 .segment-button {
-  border-radius: 50px;
+  --border-radius: 50px;
   font-size: 16px;
+  --background: #ebebeb;
+  --border-color: transparent;
+  --color: #919191
 }
