--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -66,9 +66,17 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 
-  // @font-face {
-  //   font-family: 'bigjohnpro-bold';
-  //   src: url('../assets/fonts/Big\ John\ PRO/bigjohnpro-bold.otf');
-  // }
+  ion-popover {
+    ion-backdrop {
+      opacity: 0.2 !important;
+    }
+
+    .popover-wrapper {
+      .popover-content {
+        width: 80vw;
+        max-width: 500px;
+      }
+    }
+  }
 
 }
