--- a/src/app/reports/reports.page.html
+++ b/src/app/reports/reports.page.html
@@ -1,4 +1,4 @@
-<div>
+<div class="header">
   <ion-grid>
     <!-- title and image -->
     <ion-row>
@@ -36,7 +36,7 @@
     <!-- end works and reports buttons -->
   </ion-grid>
 </div>
-<ion-content>
+<ion-content class="main">
   <!-- reports card -->
   <ion-card
     *ngFor="let report of reports"
