--- a/src/app/reports/create-reports/create-reports.component.scss
+++ b/src/app/reports/create-reports/create-reports.component.scss
@@ -8,6 +8,9 @@ ion-content {
 }
 
 ion-card {
+  --background: #ffffff;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.230);
+
   div {
     display: flex;
     flex-direction: row
@@ -58,11 +61,15 @@ ion-label {
 }
 
 .select {
+  display: flex;
+  justify-content: center;
+
   ion-select {
-    background-color: #f5f5f5;
-    width: 100%;
-    border-radius: 10px;
+    background-color: #ffffff;
+    width: 90%;
     -webkit-padding-end: 20px;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.230);
+    border-radius: 5px
   }
 }
 
@@ -81,19 +88,25 @@ ion-label {
   }
 }
 
-ion-grid {
+
+.process {
+
   ion-range {
-    padding-right: 5px;
-    padding-left: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
     --knob-size: 20px;
     --bar-height: 10px;
     --bar-border-radius: 10px;
+
   }
 
   span {
     font-size: 12px;
+    padding-left: 15px
   }
+
 }
+
 
 .button {
   display: block;
@@ -103,4 +116,8 @@ ion-grid {
   ion-button {
     --border-radius: 5px
   }
+}
+
+.item {
+  --border-color: red
 }
