--- a/src/app/reports/reports.page.scss
+++ b/src/app/reports/reports.page.scss
@@ -58,3 +58,17 @@ div {
 ion-button {
   height: 35px;
 }
+
+ion-card {
+  background-color: #ffffff;
+  box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.230);
+  border-radius: 8px
+}
+
+ion-content {
+  --background: #f5f5f5
+}
+
+.header {
+  background-color: #f5f5f5
+}
