--- a/src/app/workers/workers.page.scss
+++ b/src/app/workers/workers.page.scss
@@ -2,6 +2,10 @@ ion-item {
   padding: 5px
 }
 
+.header {
+  background-color: #f5f5f5;
+}
+
 ion-thumbnail {
   width: 90.5px;
   height: 100%;
@@ -70,4 +74,14 @@ ion-fab {
   --background: #ebebeb;
   --border-color: transparent;
   --color: #919191
+}
+
+ion-card {
+  background-color: #ffffff;
+  box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.200);
+  border-radius: 8px
+}
+
+ion-content {
+  --background: #f5f5f5
 }
