--- a/src/app/worksites/worksites.page.scss
+++ b/src/app/worksites/worksites.page.scss
@@ -2,6 +2,14 @@ ion-item {
   padding: 5px
 }
 
+ion-content {
+  --background: #f5f5f5
+}
+
+ion-header {
+  background-color: #f5f5f5;
+}
+
 ion-thumbnail {
   width: 115px;
   height: 84px;
@@ -62,4 +70,10 @@ ion-button {
 
 .card span {
   padding-right: 15px;
+}
+
+ion-card {
+  background-color: #ffffff;
+  box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.200);
+  border-radius: 8px
 }
